# bookPopularityPredictor

./: README.md  dataset.csv  dataset.xlsx  main-mp.py  main.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Hello-checkpoint.ipynb
data/: A_Tree_Grows_In_Brooklyn.txt  Atlas_Shrugged.txt  Huckleberry_Finn.txt  The_Awakening.txt
hcp_project/: BiRNN.ipynb  Untitled.ipynb  data_list.txt  data_list_short.txt  data_list_short_test.txt  main.py  predict.py  rate.txt  rate_short.txt  readMe  requirements.txt  shortstory.xlsx
hcp_project/FullTexts/: A_Tree_Grows_In_Brooklyn.txt  Atlas_Shrugged.txt  Collected_Poems_Emily_Dickinson.txt  Farenheit_451.txt  Grapes_of_Wrath.txt  Huckleberry_Finn.txt  Incidents_in_The_Life_of_a_Slave_Girl.txt  Maggie_A_Girl_of_The_Streets.txt  Slaughterhouse-five.txt  The_Awakening.txt  The_Cruicble.txt  The_House_of_Mirth.txt  The_Jungle.txt  The_Portrait_of_a_Lady.txt  Walden.txt
hcp_project/ShortStories/: An_Occurance_at_Owl_Creek_Bridge.txt  Bartleby, the Scrivener.txt  Rip_Van_Winkle.txt  Tell_Tale_Heart.txt  The_Last_Question.txt  The_Lottery.txt  The_Monkeys_Paw.txt  The_Most_Dangerous_Game.txt  The_Turn_of_the_Screw.txt  The_Yellow_Wallpaper.txt
hcp_project/model/: model1.keras  model2.keras  model3.keras
