[tool.poetry]
name = "bookpopularitypredictor"
version = "0.1.0"
description = ""
authors = ["adighosh18 <axg1328@case.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
pd = "^0.0.4"
pandas = "^2.0.3"
nltk = "^3.8.1"
transformers = "^4.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
